--- a/css/styles.css
+++ b/css/styles.css
@@ -120,6 +120,11 @@ h1 {
   font-style: normal;
 }
 
+.occupation:before {
+  content: "| ";
+  font-style: normal;
+}
+
 .year:before {
   content: ", ";
   font-style: normal;
